# uni_implementations

./: Cargo.toml  index.html  index.sass
src/: app.rs  lib.rs
src/functions/: mod.rs  residuals.rs
src/graphtheory/: algorithms.rs
src/ml/: ada_boosting.rs  dtl.rs  gbdt.rs  helpers.rs  lda.rs  linear_classification.rs  linear_regression.rs  logistic_regression.rs  logreg.rs  logres.rs  mod.rs  neuronal_networks.rs  nn.rs  ols.rs  regression_trees.rs
src/optimierung/: mod.rs  residuals.rs
